Fixing the arrow position and removing the overflow hidden only for the project

--- a/src/assets/less/portfolio.less
+++ b/src/assets/less/portfolio.less
@@ -11,6 +11,14 @@
     height: 100%;
     cursor: pointer;
     transition: all 1s cubic-bezier(.8,0,.25,1);
+    
+    &_effects {
+        position: absolute;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        text-align: center;
+        left: 50%;
+    }
 }
 
 @LAYER-ANIMATION: 5;
@@ -196,6 +204,10 @@
 	    text-decoration: none;
 	    background-size: cover;
     	background-position: center center;
+	   
+	   &_fix {
+	       overflow: inherit;
+	   }
 	}
 	
 	&-windowsbg {
@@ -272,20 +284,11 @@
 	&-right {
 	    right: -220px;
 	    .navigations();
-	       
-        &:hover {
-           background: @nav-color-right;
-        }
 	}
 	
 	&-left {
 	    left: -220px;
 	    .navigations();
-	    
-	        
-        &:hover {
-           background: @nav-color-left;
-        }
 	}
 	
 	&-informations {
